--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  http: ^0.13.4
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.9.2
+flutter_icons:
+  image_path: "assets/images/login_logo.png"
+  android: "launcher_icon"
+  ios: true
+
   flutter_test:
     sdk: flutter
 
@@ -60,6 +67,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/images/
+     - assets/icons/
+     - assets/images/google_logo.png
+     - assets/images/login_logo.png
+     - assets/images/banner.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
